modified:   product_landing_page.html 	new file:   styles.css 	renamed:    work!.png -> work.png

--- a/product_landing_page.html
+++ b/product_landing_page.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
-    <link 
-    rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/fontawesome.min.css" 
-    integrity="sha512-B46MVOJpI6RBsdcU307elYeStF2JKT87SsHZfRSkjVi4/iZ3912zXi45X5/CBr/GbCyLx6M1GQtTKYRd52Jxgw==" 
-    crossorigin="anonymous" 
-    referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="page-wrapper">
@@ -16,8 +15,8 @@
         <div class="logo">
           <img
             id="header-img"
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
-            alt="original trombones logo"
+            src="work.png"
+            alt="Let's Create Wonder Logo"
           />
         </div>
 
@@ -33,7 +32,7 @@
       <div class="container"></div>
 
       <section id="hero">
-        <h2>Handcrafted, home-made masterpieces</h2>
+        <h2>Boost Your Productivity with<br>Crafting Exceptional Web Experiences</h2>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
           <input
             name="email"
@@ -49,80 +48,87 @@
       <div class="container">
         <section id="features">
           <div class="grid">
-            <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
-            <div class="desc">
-              <h2>Premium Materials</h2>
-              <p>
-                Our trombones use the shiniest brass which is sourced locally.
-                This will increase the longevity of your purchase.
-              </p>
+            <div class="icon">
+              <i class="fas fa-desktop"></i>
             </div>
-          </div>
-          <div class="grid">
-            <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
             <div class="desc">
-              <h2>Fast Shipping</h2>
+              <h2>Responsive Design</h2>
               <p>
-                We make sure you recieve your trombone as soon as we have
-                finished making it. We also provide free returns if you are not
-                satisfied.
+                Responsive design ensures websites look and function seamlessly across all devices, 
+                from smartphones to tablets and desktops. This is crucial in today's mobile-first world,
+                where a significant portion of users access websites from their phones. 
+                Clients appreciate the convenience and professionalism that responsive design brings.
               </p>
             </div>
           </div>
           <div class="grid">
             <div class="icon">
-              <i class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+              <i class="fas fa-chart-line"></i>
             </div>
             <div class="desc">
-              <h2>Quality Assurance</h2>
+              <h2>SEO Optimization</h2>
               <p>
-                For every purchase you make, we will ensure there are no damages
-                or faults and we will check and test the pitch of your
-                instrument.
+                Search Engine Optimization (SEO) helps websites rank higher in search engine results, 
+                driving more organic traffic. By optimizing websites with relevant keywords, 
+                fast loading times, and mobile-friendliness, developers can help clients attract more potential customers.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon">
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+            <div class="desc">
+              <h2>E-commerce Integration</h2>
+              <p>
+                For businesses looking to sell products or services online, e-commerce integration is a game-changer. 
+                Developers can seamlessly integrate secure payment gateways, shopping carts, and inventory management systems into websites, 
+                providing a convenient and efficient online shopping experience for customers.
               </p>
             </div>
           </div>
         </section>
         <section id="how-it-works">
-          <iframe
-            id="video"
-            height="315"
-            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
-            frameborder="0"
-            allowfullscreen
-          ></iframe>
+          <iframe  id="video"
+           width="560" 
+           height="315" 
+           src="https://www.youtube.com/embed/m00MJDypR5I?si=diZXu0Ab8KLw0pPm" 
+           title="YouTube video player" 
+           frameborder="0" 
+           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section id="pricing">
           <div class="product" id="tenor">
-            <div class="level">Tenor Trombone</div>
-            <h2>$600</h2>
+            <div class="level"></div>
+            <h2>Rs.3000</h2>
             <ol>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
+              <li>Basic Website Design </li>
+              <li>SEO optimization.</li>
+              <li>Hosting.</li>
             </ol>
             <button class="btn">Select</button>
           </div>
           <div class="product" id="bass">
-            <div class="level">Bass Trombone</div>
-            <h2>$900</h2>
+            <div class="level">Regular</div>
+            <h2>Rs.5000</h2>
             <ol>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum.</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
+              <li>Advanced website design</li>
+              <li>SEO optimization</li>
+              <li>Hosting</li>
+              <li>Email marketing</li>
             </ol>
             <button class="btn">Select</button>
           </div>
           <div class="product" id="valve">
-            <div class="level">Valve Trombone</div>
-            <h2>$1200</h2>
+            <div class="level">Premium</div>
+            <h2>Rs.10000</h2>
             <ol>
-              <li>Plays similar to a Trumpet</li>
-              <li>Great for Jazz Bands</li>
-              <li>Lorem ipsum dolor.</li>
-              <li>Lorem ipsum.</li>
+              <li>Custom website design</li>
+              <li>Advanced SEO</li>
+              <li>Hosting</li>
+              <li>Email marketing</li>
+              <li>Social Media Management</li>
             </ol>
             <button class="btn">Select</button>
           </div>
@@ -133,7 +139,11 @@
             <li><a href="#">Terms</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <span>Copyright 2016, Original Trombones</span>
+          <span id="copyright"></span>
+
+          <script>
+            document.getElementById("copyright").innerHTML = `Copyright ${new Date().getFullYear()}, LET'S CREATE WONDERS.`;
+          </script>
         </footer>
       </div>
     </div>
