--- a/product_landing_page.html
+++ b/product_landing_page.html
@@ -33,7 +33,7 @@
 
       <section id="hero">
         <h2>Boost Your Productivity with<br>Crafting Exceptional Web Experiences</h2>
-        <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <form method="POST" action="/submit">
           <input
             name="email"
             id="email"
